xml is sent to the server and validated